--- a/css/style.css
+++ b/css/style.css
@@ -886,7 +886,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   text-align: center;
   margin-bottom: 20px;
   /*align-content: center;*/
+}
 
+.add{
+  color: black;
+  text-align: center;
+  font-size: 15px
 }
 
 #team .member .pic {
@@ -905,6 +910,9 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #fff;
   padding: 15px;
   border-radius: 0 0 3px 3px;
+  /*height: 100%;*/
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 20px 20px 0 rgba(0, 0, 0, 0.19);
+  /*width: 25vw*/
 }
 
 #team .member h4 {
